tests/baselines/reference/parserErrorRecoveryIfStatement5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement5.ts (6 errors) ====
    class Foo {
      f1() {
        if (a.b) {
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      f2() {
           ~
!!! error TS1005: ';' expected.
      ~~
!!! error TS2304: Cannot find name 'f2'.
      }
      f3() {
           ~
!!! error TS1005: ';' expected.
      ~~
!!! error TS2304: Cannot find name 'f3'.
      }
    }
     
!!! error TS1005: '}' expected.